--- a/ordering-service-local.properties
+++ b/ordering-service-local.properties
@@ -7,3 +7,11 @@ server.port=8081
 restaurant.search.item.url= http://localhost:8080/item/id/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
+user=user
+password=password
+
+pring.output.ansi.enabled=ALWAYS
+logging.level.org.springframework=ERROR
+logging.level.com.eatza=DEBUG
+logging.pattern.console=%clr(%d{yy-MM-dd E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(${PID}){faint} %clr(---){faint} %clr([%8.15t]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n
+
