--- a/restaurant-service-local.properties
+++ b/restaurant-service-local.properties
@@ -1,12 +1,12 @@
 spring.application.name= restaurant-service
 server.port=8083
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb
+spring.datasource.url=jdbc:mysql://mysql-standalone:3306/restaurantdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone = http://eurekaserver:8761/eureka
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
