--- a/restaurant-service-local.properties
+++ b/restaurant-service-local.properties
@@ -7,6 +7,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-eureka.client.serviceUrl.defaultZone = http://eurekaserver:8761/eureka
+eureka.client.serviceUrl.defaultZone = http://eurekaservice:8761/eureka
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
