--- a/restaurant-service-local.properties
+++ b/restaurant-service-local.properties
@@ -1,5 +1,5 @@
-spring.application.name=RestaurantService
-server.port=8080
+#spring.application.name=RestaurantService
+#server.port=8080
 spring.datasource.url=jdbc:mysql://mysql-standalone:3306/restaurantdb
 spring.datasource.username=root
 spring.datasource.password=root
