--- a/restaurant-service.properties
+++ b/restaurant-service.properties
@@ -1,12 +1,12 @@
 #spring.application.name=RestaurantService
 #server.port=8080
-spring.datasource.url=jdbc:mysql://mysql-standalone:3306/restaurantdb
+spring.datasource.url=jdbc:mysql://mysql_container:3306/restaurantdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-eureka.client.serviceUrl.defaultZone = http://eurekaservice:8761/eureka
+eureka.client.serviceUrl.defaultZone = http://eureka_container:8761/eureka
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
