--- a/restaurant-service.properties
+++ b/restaurant-service.properties
@@ -10,3 +10,4 @@ spring.jpa.show-sql=true
 eureka.client.serviceUrl.defaultZone = http://eureka_container:8761/eureka
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
+hihh
