--- a/restaurant-service.properties
+++ b/restaurant-service.properties
@@ -1,13 +1,9 @@
-spring.datasource.url=jdbc:mysql://mysql_container:3306/restaurantdb
+spring.datasource.url=jdbc:mysql://40.75.30.212:3306/restaurantdb?useSSL=true&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-eureka.client.serviceUrl.defaultZone = http://eureka_container:8761/eureka
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
 
 
 
