--- a/restaurant-service.properties
+++ b/restaurant-service.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://40.75.30.212:3306/restaurantdb?useSSL=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql-standalone:3306/restaurantdb?useSSL=true&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
